[tool.poetry]
name = "Python project template"
version = "0.1.0"
description = ""
authors = ["Yongheng Chen <changochen1@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"
pylint = "*"
toml = "*"
mypy = "*"
pyright = "*"
yapf = "*"
nox = "*"
pytest = "*"
pytest-mock = "*"
pytest-xdist = "*"
pytest-cov = "*"
loguru = "*"
fire = "^0.5.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.yapfignore]
ignore_patterns = [
]

[tool.mypy]
ignore_missing_imports = true

[tool.pyright]
reportMissingImports = false

[tool.yapf]
based_on_style = "google"
indent_width = 2
column_limit = 100
SPACES_BEFORE_COMMENT=2
